Enhance history management: eliminate history size limit, prevent duplicates, and enable task removal from history. Update related tests and task manager logic.